udf-macros/tests/fail/wrong_impl.stderr
error: Expected trait `BasicUdf` or `AggregateUdf`
 --> tests/fail/wrong_impl.rs:9:1
  |
9 | impl Foo for X {}
  | ^^^^^^^^^^^^^^^^^
